# SocketTransport

./: .cproject  .gitignore  .gitignore~  .project  CMakeLists.txt  Makefile  Makefile.config  README.md  ShowVideo.pro  SocketTransport  calculator.cpp  calculator.h  client.cpp  client.h  client_read_data.cpp  client_read_data.h  config.h  estimator.cpp  estimator.h  guithread.cpp  guithread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  socketmanager.cpp  socketmanager.h
Debug/: makefile  objects.mk
Debug/src/: Client.d  ClientReadData.d  Config.d  Server.d  ServerReadData.d  main.d  subdir.mk
src/: Client.cpp  Client.cpp~  Client.h  Client.h~  ClientReadData.cpp  ClientReadData.cpp~  ClientReadData.h  ClientReadData.h~  Config.cpp  Config.h  Config.h~  Server.cpp  Server.h  ServerReadData.cpp  ServerReadData.cpp~  ServerReadData.h  ZBase64.cpp  ZBase64.h  databaseManager.cpp  databaseManager.hpp  estimator.cpp  estimator.h  estimatorAngleTrunk.cpp  estimatorAngleTrunk.h  estimatorCosine.cpp  estimatorCosine.h  estimatorEuclidean.cpp  estimatorEuclidean.h  main.cpp  ports.cfg  redis.cpp  redis.h  redis.h~
